# erbloom

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  docker-compose-ci.yml  docker-compose.yml  docker.mk  rebar.config
.github/workflows/: docker.yml  main.yml
config/: vm.args
crates/bloom/: .gitignore  Cargo.toml  build.rs
crates/bloom/.cargo/: config
crates/bloom/src/: atoms.rs  bloom.rs  container.rs  forgetful.rs  lib.rs  nif.rs  options.rs
crates/bloom/src/filter/: bloom.rs  forgetful.rs  mod.rs
doc/: overview.edoc
examples/elixir/bloom_example/: .gitignore  README.md  mix.exs
examples/elixir/bloom_example/lib/: bloom_example.ex
examples/elixir/bloom_example/test/: bloom_example_test.exs
imgs/base/: Dockerfile  docker-entry.sh
src/: bloom.erl  bloom_nif.erl  erbloom.app.src  erbloom_app.erl  erbloom_sup.erl  forgetful_bloom.erl
test/: bloom_SUITE.erl  common_SUITE.erl  forgetful_SUITE.erl  spec.spec
