[package]
name = "bloom"
version = "0.2.0"
authors = ["Maxim Molchanov <m.molchanov@vonmo.com>"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
name = "bloom"
crate-type = ["dylib"]

[dependencies]
bincode = "1.2.1"
rustler = "0.22.0-rc.0"
bloomfilter = "1.0.2"
siphasher = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
